--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,9 @@
     padding: 0px;
     overflow: hidden; */
 }
+
+@media screen and (max-width: 430px) {
+    .app__page{
+        flex-direction: column;
+    }
+}
