--- a/src/RecommendedVideos.css
+++ b/src/RecommendedVideos.css
@@ -1,6 +1,5 @@
 .recommendedVideos{
     flex: 0.8;
-    /* background-color: #f9f9f9; */
     padding: 20px 20px;
     padding-bottom: 0;
 }
@@ -23,4 +22,10 @@
     position: relative;
     top: 40%;
     left: 40%;
+}
+
+@media screen and (max-width: 430px) {
+    .recommendedVideos > p{
+        font-size: 1.5rem;
+    }
 }
