--- a/src/SearchResult.css
+++ b/src/SearchResult.css
@@ -43,3 +43,33 @@
     font-size: 12px;
     color: rgb(97, 96, 96);  
 }
+
+@media screen and (max-width: 830px) {
+    .thumbnail{
+        width: 100%;
+    }
+    .title{
+        font-size: 14px;
+    }
+    .views-Time{
+        font-size: 11px;
+        margin-top: 2px;
+    }
+    .channel
+    {
+        margin: 8px 0;
+    }
+    .desc{
+        font-size: 11px;  
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .searchResults{
+        display: flex;
+        flex-direction: column;
+    }
+    .info{
+        margin-bottom: 14px;
+    }}
+
